<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lower Brightness</string>
    <string name="action_settings">Settings</string>
    <string name="start_brightness">On</string>
    <string name="brightness_control">Brightness control</string>
    <string name="stop_brightness">off</string>
    <string name="opacity">Opacity</string>
    <string name="timer_of_brightness_working">Timer of brightness working</string>
    <string name="btn_timer_reset">Timer reset</string>
    <string name="percent_opacity_filter">%1$d %%</string>
    <string name="language">Language</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="about">About</string>
    <string name="setting_activity_name">Setting</string>
    <string name="logo_title">Lower Brightness</string>
    <string name="image_description">logo splash</string>
    <string name="timer_error">Need to write time!</string>
    <string name="timer_finish_message">Timer finish to work. App the end!</string>
    <string name="permission_error_message">Permission denied. Please enable it in Settings. App will exit now</string>
    <string name="language_dialog_title">Language</string>
    <string name="language_english">English</string>
    <string name="cancel">Cancel</string>
    <string name="language_russian">Russian</string>
</resources>