<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical"
    tools:context="com.example.georgy.lowerbrightness.ui.SettingActivity">

    <!-- toolbar -->
    <include layout="@layout/toolbar" />

    <Button
        style="@style/SettingButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:text="@string/language"
        android:textAllCaps="false" />

    <Button
        style="@style/SettingButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:text="@string/check_for_updates"
        android:textAllCaps="false" />

    <Button
        style="@style/SettingButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:text="@string/about"
        android:textAllCaps="false" />


</LinearLayout>
