<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.georgy.lowerbrightness.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/Widget.TextView.MainTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/brightness_control" />

    <RadioButton
        android:id="@+id/radioButtonOn"
        style="@style/Widget.TextView.SubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/start_brightness" />

    <RadioButton
        android:id="@+id/radioButtonOff"
        style="@style/Widget.TextView.SubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/stop_brightness" />

    <TextView
        style="@style/Widget.TextView.MainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/opacity" />

    <SeekBar
        android:id="@+id/seekBarLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:max="100"
        android:maxHeight="10dp"
        android:minHeight="10dp" />

    <TextView
        android:id="@+id/tvOpacityLevel"
        style="@style/Widget.TextView.SubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="12dp" />

    <TextView
        style="@style/Widget.TextView.SubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/timer_of_brightness_working" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.georgy.lowerbrightness.TimeEditText
            android:id="@+id/etTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_holo_light"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkboxTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/etTimer"
            android:layout_toRightOf="@id/etTimer"
            android:scaleX="1.50"
            android:scaleY="1.50" />

        <Button
            android:id="@+id/btnTimerReset"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etTimer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/btn_timer_reset" />
    </RelativeLayout>

</LinearLayout>
